--- a/css/styles.css
+++ b/css/styles.css
@@ -600,8 +600,14 @@ progress {
 
 .img-fluid {
   max-width: 100%;
+  height: 300px;
+}
+
+.img-fluid2 {
+  max-width: 100%;
   height: auto;
 }
+
 
 .img-thumbnail {
   padding: 0.25rem;
@@ -11693,8 +11699,8 @@ header.masthead .masthead-heading {
   text-align: center;
 }
 .team-member img {
-  width: 14rem;
-  height: 14rem;
+  width: 10rem;
+  height: 10rem;
   border: 0.5rem solid rgba(0, 0, 0, 0.1);
 }
 .team-member h4, .team-member .h4 {
