--- a/css/styles.css
+++ b/css/styles.css
@@ -600,14 +600,14 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: 300px;
+  height: 312px;
+  align-items: center ;
 }
 
-.img-fluid2 {
-  max-width: 100%;
-  height: auto;
+.img-fluid2 { 
+max-width: 100%;
+  height: 312px;
 }
-
 
 .img-thumbnail {
   padding: 0.25rem;
@@ -11404,11 +11404,11 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #054261;
-  background-image: url("../assets/img/header-bg.jpg");
+  /* background-image: url("../assets/img/header-bg7.png"); */
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
-  background-size: cover;
+  background-size: 60%;
 }
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
@@ -11447,10 +11447,12 @@ header.masthead .masthead-heading {
   max-width: 26rem;
   margin-left: auto;
   margin-right: auto;
+  align-items: center;
+  justify-content:center;
 }
 #portfolio .portfolio-item .portfolio-link {
   position: relative;
-  display: block;
+  display: table;
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
@@ -11467,6 +11469,7 @@ header.masthead .masthead-heading {
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
   font-size: 1.25rem;
   color: white;
+  
 }
 #portfolio .portfolio-item .portfolio-link:hover .portfolio-hover {
   opacity: 1;
@@ -11701,7 +11704,7 @@ header.masthead .masthead-heading {
 .team-member img {
   width: 10rem;
   height: 10rem;
-  border: 0.5rem solid rgba(0, 0, 0, 0.1);
+  /* border: 0.5rem solid rgba(0, 0, 0, 0.1); */
 }
 .team-member h4, .team-member .h4 {
   margin-top: 1.5rem;
