--- a/css/styles.css
+++ b/css/styles.css
@@ -11404,15 +11404,16 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #054261;
-  /* background-image: url("../assets/img/header-bg7.png"); */
+  /*Fundo foto criado por user6702303 - br.freepik.com*/
+  background-image: url("../assets/img/header-bg.jpg");
   background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  background-size: 60%;
+  background-position: center;
+  background-size: 100%;
 }
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
   font-style: bold;
+  color: #fff;
   line-height: 1.5rem;
   margin-bottom: 25px;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
